src/test/ui/nll/user-annotations/pattern_substs_on_brace_struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_struct.rs:7:28
   |
LL |     let foo = Foo { field: &y };
   |                            ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_struct.rs:14:28
   |
LL |     let foo = Foo { field: &y };
   |                            ^^ borrowed value does not live long enough
...
LL | }
   | - `y` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
